# LosPollosHermanos

./: .gitignore  AGROTOKEN_CLAUDE_CODE_PROMPT.md  Anchor.toml  DEPLOY_CHECKLIST.md  README.md  agrotoken.json  docker-compose.yml  feature-roadmap.md  message.txt  package-lock.json  package.json  roadmap.md
assets/: README.md
assets/diagrams/: diagrams.md
assets/gifs/: gif.md
assets/screenshots/: screenshots.md
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application.yml
docs/: README.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaign/[id]/: page.tsx
frontend/src/app/farmer/dashboard/: page.tsx
frontend/src/components/: BuyTokenModal.tsx  CampaignCard.tsx  FarmerPassportCard.tsx  LanguageSwitcher.tsx  Navbar.tsx  ProofOfAsset.tsx  ProofTimeline.tsx  SolanaVerificationPanel.tsx  StatusTimeline.tsx  WalletActionButton.tsx  WalletProvider.tsx
frontend/src/hooks/: useAgroProgram.ts  useCampaigns.ts  usePortfolio.ts  useSolana.ts
frontend/src/lib/: agrotoken.ts  api.ts  contentLocalization.ts  i18n.tsx  solana.ts
frontend/src/lib/anchor/: idl.json
migrations/: deploy.ts
programs/agrotoken/: Cargo.toml
programs/agrotoken/src/: errors.rs  lib.rs
programs/agrotoken/src/instructions/: burn_tokens.rs  buy_tokens.rs  cancel.rs  confirm_harvest.rs  create_campaign.rs  distribute.rs  mod.rs
programs/agrotoken/src/state/: campaign.rs  mod.rs
tests/: agrotoken.ts
(+35 files in other folders)
