[package]
name = "agrotoken"
version = "0.1.0"
description = "Anchor program for tokenized agricultural harvest campaigns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agrotoken"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
